package com.neouul.sesac.`06-abstract-interface`

interface Thing {
    var weight: Double
}