package com.sesac.practice.day06

abstract class IntangibleAsset(
    name: String,
) : Asset(name)
